2005-09-08  Jakub Jelinek  <jakub@redhat.com>

	* ld.texinfo: Document -z {no,}execstack, -z {no,}relro
	and --eh-frame-hdr options.

2005-09-07  Alan Modra  <amodra@bigpond.net.au>

	* ldexp.c (fold_name <SIZEOF>): Return 0 for non-existent section.
	(exp_fold_tree_1): Print assert message only in final stage of
	linking.  Trigger assertion failure if expression cannot be
	evaluated.

2005-09-06  H.J. Lu  <hongjiu.lu@intel.com>

	PR ld/1263
	* emultempl/elf32.em (gld${EMULATION_NAME}_load_symbols): Check
	--just-symbols on DSO.

2005-08-18  Alan Modra  <amodra@bigpond.net.au>

	* scripttempl/elf.sc: Remove commented out defines.

2005-08-18  Alan Modra  <amodra@bigpond.net.au>

	* emulparams/a29k.sh: Delete.
	* emulparams/ebmon29k.sh: Delete.
	* emulparams/sa29200.sh: Delete.
	* Makefile.am: Remove a29k support.
	* configure.tgt: Likewise.
	* ld.texinfo: Likewise.
	* Makefile.in: Regenerate.

2005-08-17  Jakub Jelinek  <jakub@redhat.com>

	* ldgram.y (vers_defns): Don't lose pattern list before
	extern NAME {}.  Handle global, local and extern symbol names.

2005-08-17  Kaz Kojima  <kkojima@rr.iij4u.or.jp>

	* emultempl/sh64elf.em (sh64_elf_${EMULATION_NAME}_after_allocation):
	Don't increment rel_count of .cranges here.  Set rawsize of .cranges.

2005-08-10  Nick Clifton  <nickc@redhat.com>

	* pe-dll.c (pe_exe_fill_sections): Call lang_reset_memory_regions
	before lang_size_sections.

2005-08-09  Alan Modra  <amodra@bigpond.net.au>

	* emulparams/hppa64linux.sh (LARGE_SECTIONS): Remove .tbss.

2005-08-08  Eric Doenges <Eric.Doenges@betty-tv.com>

	* Makefile.am (ALL_EMULATIONS): Add msp430x21xx	variants.
	Add rules to build these emulations.
	* Makefile.in: Regenerate.
	* configure.tgt (msp430): Add the new variants to the
	targ_extra_emuls list.
	* emulparams/msp430all.sh: Add entries for the msp430x21xx
	variants.

2005-08-05  H.J. Lu  <hongjiu.lu@intel.com>

	* ld.texinfo: Document PROVIDE_HIDDEN.
